<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/content"
    android:background="#FFF"
    tools:context="com.mathheals.euvou.controller.event_consultation.EventConsultation">

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/radio_events"
        android:gravity="center"
        android:id="@+id/search_radio_group"
        android:orientation="horizontal"
        android:layout_marginTop="25dp">

        <RadioButton android:id="@+id/radio_events"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events"/>

        <RadioButton android:id="@+id/radio_people"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/people"/>
    </RadioGroup>

    <ListView
        android:id="@+id/events_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/search_radio_group"
        android:layout_marginTop="25dp">
    </ListView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:textColor="@color/black"
        android:id="@+id/event_not_found_text"
        android:layout_below="@id/search_radio_group"
        android:text="@string/event_not_found_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

</RelativeLayout>
