<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mathheals.euvou.controller.home_page.HomePage">

    <item android:id="@+id/search"
        android:icon="@drawable/ic_action_search"
        android:title="@string/search"
        app:showAsAction="always"
        android:onClick="searchOnclick"/>

    <item android:id="@+id/edit_register"
        android:title="@string/edit_register"
        app:showAsAction="never"/>

    <item android:id="@+id/register_event"
        android:title="@string/create_event"
        app:showAsAction="never" />

    <item android:id="@+id/settings"
        android:title="@string/settings"
        app:showAsAction="never" />

    <item android:id="@+id/myEvents"
        android:title="@string/my_events"
        app:showAsAction="never" />

    <item android:id="@+id/logout"
        android:title="@string/logout"
        app:showAsAction="never" />

</menu>
