...
                android:layout_below="@+id/grid"
                android:text="Sua avaliação:"
                android:layout_marginTop="10dp"
                />

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="5"
                android:stepSize="0.5"
                android:rating="0.0"
                android:scaleX="0.5"
...
