...
                android:layout_width="25dp"
                android:layout_height="wrap_content"
                android:onClick="searchPlace">
            </ImageView>
        </LinearLayout>
        <ListView
            android:id="@+id/left_drawer_list"
            android:layout_width="240dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="#363636"
            android:choiceMode="singleChoice"
            android:divider="#FFFFFF"
...
