...
                android:background="#00C0C3"
                android:text="@string/change"
                android:layout_gravity="left"
                />

            <Button
                android:id="@+id/removeEvent"
                android:layout_width="143dp"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF"
                android:background="#00C0C3"
                android:text="@string/remove"
                android:layout_gravity="right|center_vertical"
...
